--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,10 +1,12 @@
 {
   "version": "2.0",
   "app_name": "carbon-process-audio",
+  "environment_variables": {
+    "APP_BUCKET_NAME": "carbon-audio-uploads-1617826931"
+  },
   "stages": {
     "dev": {
       "api_gateway_stage": "api"
     }
-  },
-  "app_bucket_name": 'carbon-audio-uploads-1617826931'
+  }
 }
